@@ -1,5 +1,12 @@
 2008-06-03  Øyvind Kolås  <pippin@o-hand.com>
 
+	* clutter-box2d/clutter-box2d-actor.cpp: made the sync methods between
+	physics state/scene graph private.
+	* clutter-box2d/clutter-box2d-actor.h:
+	* clutter-box2d/clutter-box2d.cpp:
+
+2008-06-03  Øyvind Kolås  <pippin@o-hand.com>
+
 	* examples/popup.c: (popup_add2), (popup_add_slider):
 	* examples/scene-pyramid.c: (scene_pyramid):
 	* examples/wrap-group.c: (wrap_group_add): removed older
